# krita-sprite-visibility-rules

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCS_AUDIT.md  INTEROPERABILITY.md  PERFORMANCE.md  README.md  RELEASE_NOTES.md  TEST_REPORT.md  pyproject.toml  sprite_visibility_rules.desktop
.github/: release-trigger-v1.0.2.md
.github/workflows/: release.yml  tests.yml
scripts/: benchmark_hot_path.py  build_release.py  install-flatpak.sh  publish-github.sh  verify_release.py
sprite_visibility_rules/: Manual.html  __init__.py  controller.py  dialogs.py  docker.py  event_broker.py  krita_adapter.py  models.py  qt_compat.py  rule_engine.py  safe_docker.py  scheduler.py  storage.py  version.py
tests/: test_controller.py  test_controller_revision.py  test_flatpak_installer.sh  test_interoperability.py  test_krita_adapter.py  test_models.py  test_package.py  test_rule_engine.py  test_storage.py  test_ui_smoke.py
